# wi1-bot

./: .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.bot  Dockerfile.transcoder  Dockerfile.webhook  LICENSE  README.md  add_tag.py  alembic.ini  arr_webhook.py  bot.py  compose.yaml  config.yaml.template  conftest.py  dashboard.py  flake.nix  helpers.py  movie.py  push.py  pyproject.toml  radarr.py  requirements.txt  requirements_dev.txt  setup.cfg  sonarr.py  start.py  transcode_item.py  transcoder.py  webhook.py
.github/workflows/: ci.yaml  docker.yaml  pypi-publish.yml  release-please.yml
alembic/: env.py
alembic/versions/: f4853c024414_initial_migration.py
arr/: README.md  pyproject.toml  radarr.py  sonarr.py
arr/src/wi1_bot/arr/: __init__.py  common.py  config.py  movie.py  radarr.py  sonarr.py
arr/tests/: test_arr_integration.py  test_arr_models.py  test_arr_state.py
bot/: config.yaml.template  pyproject.toml
bot/src/wi1_bot/bot/: config.py  tmdb.py
bot/src/wi1_bot/bot/discord/: bot.py  helpers.py
bot/src/wi1_bot/bot/discord/cogs/: __init__.py  admin.py  movie.py  series.py
bot/src/wi1_bot/bot/scripts/: add_tag.py
bot/tests/: test_bot_config.py  test_helpers.py  test_tmdb.py
cogs/: __init__.py  movie.py
common/: README.md  pyproject.toml
common/src/wi1_bot/common/: __init__.py  config.py  logging.py  push.py
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.tsx  Log.css  Log.tsx  index.css  index.tsx
margot/: config.py  push.py  webhook.py
margot/arr/: download.py  episode.py  movie.py  radarr.py  sonarr.py
margot/discord/: bot.py
margot/discord/cogs/: __init__.py  movie.py  series.py
margot/scripts/: start.py  transcode_item.py
margot/transcoder/: transcode_queue.py  transcoder.py
scripts/: add_tag.py  queue_size.py  transcode_item.py
tests/: config.yaml  conftest.py  movie_downloaded.py  test_arr_integration.py  test_copy_streams.py  test_languages.py  test_models.py  test_transcode_streams.py  test_transcoder.py  test_util.py  test_webhook.py
tests/files/: convert-to-test.sh  ita_eng_none_audio.mkv
transcoder/: README.md  config.yaml.template  pyproject.toml  transcode_queue.py  transcoder.py
transcoder/src/wi1_bot/transcoder/: __init__.py  config.py  paths.py  transcoder.py  worker.py
transcoder/src/wi1_bot/transcoder/scripts/: run.py
transcoder/tests/: test_languages.py  test_paths.py  test_transcode_streams.py  test_transcoder.py  test_worker.py
transcoder/tests/files/: h264_eac3_pgssub_mjpeg.mkv  ita_audio.mkv  none_ita_eng_audio.mkv
webhook/: README.md  config.yaml.template  pyproject.toml
webhook/src/wi1_bot/webhook/: __init__.py  app.py  config.py  db.py  metrics.py  models.py  rescan.py  transcode_queue.py
webhook/src/wi1_bot/webhook/migrations/: env.py
webhook/src/wi1_bot/webhook/migrations/versions/: c2d3e4f5a6b7_add_lease_columns.py  d3e4f5a6b7c8_autoincrement_job_id.py  e4f5a6b7c8d9_add_status_changed_at.py
webhook/src/wi1_bot/webhook/scripts/: migrate.py  rescan.py  serve.py  transcode_item.py
webhook/tests/: conftest.py  test_integration.py  test_jobs_api.py  test_metrics.py  test_queue.py  test_webhook.py
wi1-bot/: README.md  pyproject.toml
wi1-bot/src/wi1_bot/bot/: __init__.py  config.py
wi1-bot/src/wi1_bot/bot/discord/: bot.py
wi1-bot/src/wi1_bot/bot/discord/cogs/: movie.py
wi1-bot/src/wi1_bot/bot/scripts/: add_tag.py  start.py
wi1_bot/: __init__.py  alembic.ini  bot.py  config.py  db.py  helpers.py  languages.py  models.py  push.py  webhook.py
wi1_bot/arr/: __init__.py  download.py  episode.py  movie.py  radarr.py  sonarr.py  util.py
wi1_bot/cogs/: __init__.py  movie.py
wi1_bot/discord/: bot.py  helpers.py
wi1_bot/discord/cogs/: movie.py  series.py
wi1_bot/migrations/: env.py
wi1_bot/migrations/versions/: b1f2c3d4e5a6_store_quality_profile.py  f4853c024414_initial_migration.py
wi1_bot/scripts/: add_tag.py  migrate.py  rescan.py  start.py  transcode_item.py
wi1_bot/transcoder/: __init__.py  ffprobe.py  models.py  transcode_queue.py  transcoder.py  websocket.py
