[project]
name = "wi1-bot"
dynamic = ["version"]
description = "Discord bot for Radarr/Sonarr integration"
authors = [{ name = "William Huebner", email = "wilhueb@gmail.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "discord-py>=2.3.2",
    "flask>=3.0.2",
    "pyarr>=5.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/wthueb/wi1-bot"

[project.scripts]
wi1-bot = "wi1_bot.scripts.start:main"
transcode-item = "wi1_bot.scripts.transcode_item:main"
add-tag = "wi1_bot.scripts.add_tag:main"
rescan = "wi1_bot.scripts.rescan:main"
migrate = "wi1_bot.scripts.migrate:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.11.13",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
packages = ["wi1_bot", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign", "attr-defined"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["wi1_bot"]
