[project]
name = "wi1-bot"
dynamic = ["version"]
description = "Discord bot for Radarr/Sonarr integration"
authors = [{ name = "William Huebner", email = "wilhueb@gmail.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "discord-py>=2.3.2",
    "flask>=3.0.2",
    "pyarr>=5.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/wthueb/wi1-bot"

[project.scripts]
wi1-bot = "wi1_bot.scripts.start:main"
transcode-item = "wi1_bot.scripts.transcode_item:main"
add-tag = "wi1_bot.scripts.add_tag:main"
rescan = "wi1_bot.scripts.rescan:main"
migrate = "wi1_bot.scripts.migrate:main"

[dependency-groups]
dev = [
    "basedpyright>=1.21.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.11.13",
]

[tool.basedpyright]
typeCheckingMode = "strict"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[[tool.basedpyright.executionEnvironments]]
root = "wi1_bot/arr"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.hatch.build.targets.wheel]
packages = ["wi1_bot"]
