[metadata]
name = wi1-bot
version = 1.0.3
description = Discord bot for Radarr/Sonarr integration
author = William Huebner
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    find:
install_requires =
    discord.py==1.7.3
    Flask==2.1.2
    mongoengine==0.23.1
    pyarr==3.1.3
    pymongo==3.12.3
    python-pushover==0.4
    PyYAML==6.0

python_requires = >=3.10

[options.entry_points]
console_scripts =
    wi1-bot = wi1_bot.scripts.start:main
    transcode-item = wi1_bot.scripts.transcode_item:main
    add-tag = wi1_bot.scripts.add_tag:main
