[metadata]
name = wi1-bot
version = 1.0.9
description = Discord bot for Radarr/Sonarr integration
author = William Huebner
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    find:
install_requires =
    discord.py==1.7.3
    Flask==2.1.2
    mongoengine==0.23.1
    pyarr==3.1.3
    pymongo==3.12.3
    python-pushover==0.4
    PyYAML==6.0
python_requires = >=3.10

[options.extras_require]
dev =
    black==22.3.0
    discord.py-stubs==1.7.3
    flake8==4.0.1
    isort==5.10.1
    mongo-types==0.15.1
    mypy==0.950
    pre-commit==2.19.0
    types-PyYAML==6.0.7

[options.entry_points]
console_scripts =
    wi1-bot = wi1_bot.scripts.start:main
    transcode-item = wi1_bot.scripts.transcode_item:main
    add-tag = wi1_bot.scripts.add_tag:main

[mypy]
namespace_packages = true

[mypy-pushover.*]
ignore_missing_imports = true

[mypy-pyarr.*]
ignore_missing_imports = true

[flake8]
max-line-length = 88

[isort]
profile = black
